--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ pgvector==0.2.0
 httpx==0.28.1
 google-auth[requests]==2.40.3
 google-api-python-client==2.179.0
+scikit-learn==1.7.1
+google-cloud-storage==3.3.1
